refactor: [CP1/6] Wave1 后端重构 (228 tests)
在 P1 基础设施之上完成后端 7 个 feature 域的控制器/服务拆分、DTO + 校验、统一异常处理，补 JUnit/@WebMvcTest 测试至 228，并产出 Wave1 token tracker 与 HTML 报告。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>